@@ -76,6 +76,7 @@ Brad Parker
 Ken Parker
 Christian Pellegrin
 Laurent Pinchart
+Simon Qian
 Ramses VI
 Jean-Christian de Rivaz
 Michel Robitaille
